# ows-canton

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PROJECT.md  README.md  TASKS.md
.github/workflows/: ci.yml
ows-canton/: Cargo.toml  README.md
ows-canton/src/: audit.rs  error.rs  identifier.rs  keygen.rs  lib.rs  onboarding.rs  policy.rs  signing.rs  wallet.rs
ows-canton/src/cli/: commands.rs  mod.rs
ows-canton/src/ledger_api/: client.rs  commands.rs  mod.rs  topology.rs  types.rs
ows-canton/src/mcp/: mod.rs  tools.rs
ows-canton/tests/: docker-compose.yml
ows-canton/tests/fixtures/: canton_sandbox.conf  sample_api_key.json  sample_policy.json  sample_wallet.json
ows-canton/tests/integration/: lifecycle_test.rs  sandbox_test.rs
scripts/: run-sandbox-tests.sh
specs/: 01-identifiers.md  02-key-management.md  03-wallet-format.md  04-signing.md  05-policy-engine.md  06-onboarding.md  07-ledger-api.md  08-mcp-tools.md  09-cli-commands.md  10-testing.md  11-security.md
